--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: pages-themes/minimal@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+title: Apache Camel on OCP best practices
+description: A list of best practices documents for Apache Camel on OCP
+theme: jekyll-theme-minimal
