--- a/examples/ocp/secrets/camel-quarkus/retrieval/secretpermission.yaml
+++ b/examples/ocp/secrets/camel-quarkus/retrieval/secretpermission.yaml
@@ -1,10 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
-  creationTimestamp: "2024-08-22T09:28:53Z"
   name: secretadmin
-  resourceVersion: "273751072"
-  uid: c0d79df8-2481-4ef8-bf07-4c175e3615bc
 rules:
 - apiGroups:
   - ""
