--- a/examples/ocp/secrets/camel-spring-boot/retrieval/sa.yaml
+++ b/examples/ocp/secrets/camel-spring-boot/retrieval/sa.yaml
@@ -2,12 +2,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: sa-csb-kubernetes
-  namespace: csb-kubernetes
+  namespace: sb-ocp-secret
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: Role
 metadata:
-  name: secretadmin
+  name: secret-reader
+  namespace: sb-ocp-secret
 rules:
 - apiGroups:
   - ""
@@ -21,12 +22,12 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: sa-csb-kubernetes
-  namespace: csb-kubernetes
+  namespace: sb-ocp-secret
 subjects:
 - kind: ServiceAccount
   name: sa-csb-kubernetes
-  namespace: csb-kubernetes
+  namespace: sb-ocp-secret
 roleRef:
-  kind: ClusterRole
-  name: secretadmin
+  kind: Role
+  name: secret-reader
   apiGroup: rbac.authorization.k8s.io
