--- a/examples/ocp/secrets/camel-spring-boot/retrieval/secrets.yaml
+++ b/examples/ocp/secrets/camel-spring-boot/retrieval/secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secret-basic-auth
+  namespace: sb-ocp-secret
 type: kubernetes.io/basic-auth
 stringData:
   username: <user>
