--- a/examples/cicd/camel-cicd-exampleapp/etc/openshift.yml
+++ b/examples/cicd/camel-cicd-exampleapp/etc/openshift.yml
@@ -3,9 +3,9 @@ apiVersion: "v1"
 kind: "Service"
 metadata:
   annotations:
-    app.openshift.io/vcs-uri: "git@github.com:valdar/camel-cicd-exampleapp.git"
+    app.openshift.io/vcs-uri: "<<unknown>>"
     app.quarkus.io/quarkus-version: "3.12.0"
-    app.quarkus.io/vcs-uri: "https://github.com/valdar/camel-cicd-exampleapp.git"
+    app.quarkus.io/vcs-uri: "https://github.com/valdar/apache-camel-on-ocp-best-practices.git"
   labels:
     app.kubernetes.io/managed-by: "quarkus"
     app.kubernetes.io/name: "camel-cicd-exampleapp"
@@ -39,9 +39,9 @@ apiVersion: "image.openshift.io/v1"
 kind: "ImageStream"
 metadata:
   annotations:
-    app.openshift.io/vcs-uri: "git@github.com:valdar/camel-cicd-exampleapp.git"
+    app.openshift.io/vcs-uri: "<<unknown>>"
     app.quarkus.io/quarkus-version: "3.12.0"
-    app.quarkus.io/vcs-uri: "https://github.com/valdar/camel-cicd-exampleapp.git"
+    app.quarkus.io/vcs-uri: "https://github.com/valdar/apache-camel-on-ocp-best-practices.git"
   labels:
     app.kubernetes.io/managed-by: "quarkus"
     app.kubernetes.io/name: "camel-cicd-exampleapp"
@@ -56,9 +56,9 @@ apiVersion: "build.openshift.io/v1"
 kind: "BuildConfig"
 metadata:
   annotations:
-    app.openshift.io/vcs-uri: "git@github.com:valdar/camel-cicd-exampleapp.git"
+    app.openshift.io/vcs-uri: "<<unknown>>"
     app.quarkus.io/quarkus-version: "3.12.0"
-    app.quarkus.io/vcs-uri: "https://github.com/valdar/camel-cicd-exampleapp.git"
+    app.quarkus.io/vcs-uri: "https://github.com/valdar/apache-camel-on-ocp-best-practices.git"
   labels:
     app.kubernetes.io/managed-by: "quarkus"
     app.kubernetes.io/name: "camel-cicd-exampleapp"
@@ -82,9 +82,9 @@ apiVersion: "apps/v1"
 kind: "Deployment"
 metadata:
   annotations:
-    app.openshift.io/vcs-uri: "git@github.com:valdar/camel-cicd-exampleapp.git"
+    app.openshift.io/vcs-uri: "<<unknown>>"
     app.quarkus.io/quarkus-version: "3.12.0"
-    app.quarkus.io/vcs-uri: "https://github.com/valdar/camel-cicd-exampleapp.git"
+    app.quarkus.io/vcs-uri: "https://github.com/valdar/apache-camel-on-ocp-best-practices.git"
   labels:
     app.kubernetes.io/managed-by: "quarkus"
     app.kubernetes.io/name: "camel-cicd-exampleapp"
@@ -101,9 +101,9 @@ spec:
     metadata:
       annotations:
         alpha.image.policy.openshift.io/resolve-names: "*"
-        app.openshift.io/vcs-uri: "git@github.com:valdar/camel-cicd-exampleapp.git"
+        app.openshift.io/vcs-uri: "<<unknown>>"
         app.quarkus.io/quarkus-version: "3.12.0"
-        app.quarkus.io/vcs-uri: "https://github.com/valdar/camel-cicd-exampleapp.git"
+        app.quarkus.io/vcs-uri: "https://github.com/valdar/apache-camel-on-ocp-best-practices.git"
       labels:
         app.kubernetes.io/managed-by: "quarkus"
         app.kubernetes.io/name: "camel-cicd-exampleapp"
